Salesforce CPQ/main/default/objects/TermCondition__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Assign an unique number to this Condition to reference it in the Quote Term&apos;s Advanced Condition.</description>
    <inlineHelpText>Assign an unique number to this Condition to reference it in the Quote Term&apos;s Advanced Condition.</inlineHelpText>
    <label>Index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>