Salesforce CPQ/main/default/objects/TermCondition__c/fields/QuoteTerm__c.field-meta.xml
<CustomField>
    <fullName>QuoteTerm__c</fullName>
    <description>Parent term for this term.</description>
    <inlineHelpText>Parent term for this term.</inlineHelpText>
    <label>Quote Term</label>
    <referenceTo>QuoteTerm__c</referenceTo>
    <relationshipLabel>Term Conditions</relationshipLabel>
    <relationshipName>UseConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>