Salesforce CPQ/main/default/objects/TermCondition__c/fields/TestedField__c.field-meta.xml
<CustomField>
    <fullName>TestedField__c</fullName>
    <description>Field on quote object used for testing this condition.</description>
    <inlineHelpText>Field on quote object used for testing this condition.</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List Amount</fullName>
            </value>
            <value>
                <fullName>Regular Amount</fullName>
            </value>
            <value>
                <fullName>Customer Amount</fullName>
            </value>
            <value>
                <fullName>Net Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>