Salesforce CPQ/main/default/objects/TermCondition__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value to test against.</description>
    <inlineHelpText>Value to test against.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>