Salesforce CPQ/main/default/objects/TermCondition__c/validationRules/Field_and_Variable.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_and_Variable</fullName>
    <active>true</active>
    <description>Validates that either field or summary variable is selected, but not both.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(TestedField__c, &apos;&apos;)),NOT(ISBLANK(TestedVariable__c)))</errorConditionFormula>
    <errorMessage>You may not select both field and variable to test. Create separate conditions to test against field and variable.</errorMessage>
</ValidationRule>