Salesforce CPQ/main/default/objects/TermCondition__c/validationRules/Field_or_Variable.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_or_Variable</fullName>
    <active>true</active>
    <description>Validates that either field or summary variable is selected.</description>
    <errorConditionFormula>AND(ISPICKVAL(TestedField__c, &apos;&apos;),ISBLANK(TestedVariable__c))</errorConditionFormula>
    <errorMessage>You must select either field or variable to test.</errorMessage>
</ValidationRule>